# deepcanvas-cli

./: .gitignore  Cargo.toml  LICENSE  PLUGIN_README.md  README.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.deep/: active  config.toml  credentials
.github/workflows/: ci.yml  release.yml
claude-plugin/.claude-plugin/: marketplace.json
crates/deepcanvas-cli/: Cargo.toml
crates/deepcanvas-cli/src/: main.rs  ui.rs
crates/deepcanvas-cli/src/commands/: completion.rs  done.rs  init.rs  login.rs  logout.rs  mod.rs  pull.rs  tasks.rs  update.rs
crates/deepcanvas-core/: Cargo.toml
crates/deepcanvas-core/src/: active_task.rs  api.rs  config.rs  error.rs  lib.rs  project.rs  token.rs  transcript.rs  types.rs
docs/: cli-done.md  doc1.md  doc2.md  release.md
scripts/: bump-tap.sh  bump-version.sh  dev-env.sh  test-all.sh  test-completion.sh  test-done-with-tokens.sh  test-done.sh  test-headless.sh  test-init.sh  test-login.sh  test-logout.sh  test-pull.sh  test-tasks.sh
skills/deepcanvas-done/: SKILL.md
skills/deepcanvas-pull/: SKILL.md
skills/deepcanvas-tasks/: SKILL.md
