[workspace]
members = ["crates/deepcanvas-cli", "crates/deepcanvas-core"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "5.0"
webbrowser = "1"
indicatif = "0.17"
comfy-table = "7"
colored = "2"
toml = "0.8"
thiserror = "1"
hostname = "0.4"
os_info = "3"
urlencoding = "2"
self_update = { version = "0.42", default-features = false, features = ["rustls", "compression-flate2"] }
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
