[package]
name = "deepcanvas-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "deep"
path = "src/main.rs"

[dependencies]
deepcanvas-core = { path = "../deepcanvas-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
webbrowser = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
hostname = { workspace = true }
os_info = { workspace = true }
urlencoding = { workspace = true }
self_update = { workspace = true }
toml = { workspace = true }
dialoguer = { workspace = true }
serde_json = { workspace = true }
