[package]
name = "deepcanvas-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
keyring = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
